force-app/main/default/objects/VisMed_ProductoDeReceta__c/VisMed_ProductoDeReceta__c.object-meta.xml
<CustomObject>
    <description>Productos que se relacionan a una receta.</description>
    <label>Producto de receta</label>
    <nameField>
        <label>Nombre del producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos de receta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>