force-app/main/default/objects/VisMed_ProductoDeReceta__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B-Life</fullName>
            </value>
            <value>
                <fullName>Danone</fullName>
            </value>
            <value>
                <fullName>Nestle</fullName>
            </value>
            <value>
                <fullName>Roemmers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>