force-app/main/default/objects/VisMed_ProductoDeReceta__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>GUM</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>IF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>