force-app/main/default/objects/VisMed_ProductoDeReceta__c/fields/Id_SAP__c.field-meta.xml
<CustomField>
    <fullName>Id_SAP__c</fullName>
    <externalId>true</externalId>
    <label>Id_SAP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>