force-app/main/default/objects/VisMed_ProductoDeReceta__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enfabebe</fullName>
            </value>
            <value>
                <fullName>Nutrilon</fullName>
            </value>
            <value>
                <fullName>Vital</fullName>
            </value>
            <value>
                <fullName>Nan</fullName>
            </value>
            <value>
                <fullName>Nutribaby</fullName>
            </value>
            <value>
                <fullName>Nutramigen</fullName>
            </value>
            <value>
                <fullName>Sancor Bebe</fullName>
            </value>
            <value>
                <fullName>Neocate</fullName>
            </value>
            <value>
                <fullName>Nidina</fullName>
            </value>
            <value>
                <fullName>Nido</fullName>
            </value>
            <value>
                <fullName>Nutriadvance</fullName>
            </value>
            <value>
                <fullName>Aminomed</fullName>
            </value>
            <value>
                <fullName>Alfamino</fullName>
            </value>
            <value>
                <fullName>Alfare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>