force-app/main/default/objects/VisMed_ProductoDeReceta__c/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digestivo</fullName>
            </value>
            <value>
                <fullName>Bases</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
            <value>
                <fullName>Prematuros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>