force-app/main/default/objects/VisMed_ProductoDeReceta__c/fields/Sub_Etapa__c.field-meta.xml
<CustomField>
    <fullName>Sub_Etapa__c</fullName>
    <label>Sub Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>COMFORT</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>GUM 3</fullName>
            </value>
            <value>
                <fullName>GUM 4</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
            <value>
                <fullName>IF</fullName>
            </value>
            <value>
                <fullName>PREMATURO</fullName>
            </value>
            <value>
                <fullName>SIN LACTOSA</fullName>
            </value>
            <value>
                <fullName>SOYA</fullName>
            </value>
            <value>
                <fullName>EHF</fullName>
            </value>
            <value>
                <fullName>AAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>